src/test/deca/context/valid/op-bin-or.deca
// Description :
//    Opérateur logique OR entre deux booléens
// Résultats :
//    
//
// Historique :
//    créé le 12/01/2025
{
    boolean a = true;
    boolean b = false;
    boolean c = a || b;
}